Save basic form input

--- a/src/templates/_field/_input.twig
+++ b/src/templates/_field/_input.twig
@@ -1,1 +1,7 @@
 {% import "_includes/forms" as forms %}
+
+    {{ forms.text({
+        id: name ~ '-postalCode',
+        name: name ~ '[postalCode]',
+        value: value ? value.postalCode : null
+    }) }}
