Added marker icon in field layout

--- a/src/templates/_field/_input.twig
+++ b/src/templates/_field/_input.twig
@@ -7,9 +7,9 @@
         data-lng="4.7027497"
         data-zoom="10"
     {% endset %}
-    <div>
+    <div style="color: #576575; position: absolute; top: -30px; right: 0px;">
     <span class="easyaddressfield-marker">
-        <img src="{{ iconUrl }}" height="30">
+        <img src="{{ iconUrl }}" height="28">
         <span id="{{ name }}-drag-pin-data" {{ dragPinData|raw }}></span>
     </span>
     </div>
