--- a/src/templates/_field/_input.twig
+++ b/src/templates/_field/_input.twig
@@ -1,18 +1,20 @@
 {% import "_includes/forms" as forms %}
 
-<div class="easyaddressfield-field" id="{{ name}}">
+<div class="easyaddressfield-field" id="{{ name }}">
+    {% if keyConfigured %}
     {% set dragPinData %}
         data-default="false"
         data-lat="50.8823536"
         data-lng="4.7027497"
         data-zoom="10"
     {% endset %}
-    <div style="color: #576575; position: absolute; top: -30px; right: 3px;">
-    <span class="easyaddressfield-marker">
-        <img src="{{ iconUrl }}" height="28">
-        <span id="{{ name }}-drag-pin-data" {{ dragPinData|raw }}></span>
-    </span>
+        <div style="color: #576575; position: absolute; top: -30px; right: 3px;">
+        <span class="easyaddressfield-marker">
+            <img src="{{ iconUrl }}" height="28">
+            <span id="{{ name }}-drag-pin-data" {{ dragPinData|raw }}></span>
+        </span>
     </div>
+    {% endif %}
     <div class="form__row">
         <div class="form__item">
             {{ forms.text({
