Updated field settings

--- a/src/templates/_field/_input.twig
+++ b/src/templates/_field/_input.twig
@@ -34,7 +34,7 @@
                 value: value ? value.street : null
             }) }}
         </div>
-        {% if 'street2' in fieldSettings.enabledFields.name  %}
+        {% if 'street2' in fieldSettings.enabledFields.street2  %}
         <div class="form__item">
             {{ forms.text({
                 id: name ~ '-street2',
@@ -53,7 +53,18 @@
                 value: value ? value.postalCode : null
             }) }}
         </div>
-        <div class="form__item form__inline form--city">
+        {% if 'state' in fieldSettings.enabledFields.state  %}
+        <div class="form__item form__inline form--state">
+            {{ forms.text({
+                id: name ~ '-state',
+                name: name ~ '[state]',
+                placeholder: 'State'|t,
+                value: value ? value.state : null
+            }) }}
+        </div>
+        {% endif %}
+
+        <div class="form__item form__inline form--city {% if 'state' in fieldSettings.enabledFields.state  %}form--city-state{% endif %}">
             {{ forms.text({
                 id: name ~ '-city',
                 name: name ~ '[city]',
@@ -61,7 +72,7 @@
                 value: value ? value.city : null
             }) }}
         </div>
-        {% if 'country' in fieldSettings.enabledFields.name  %}
+        {% if 'country' in fieldSettings.enabledFields.country  %}
         <div class="form__item form--country">
             {{ forms.selectField({
                 id:         name ~ '-country',
