Default to US as default country

--- a/src/templates/_field/_settings.twig
+++ b/src/templates/_field/_settings.twig
@@ -48,7 +48,7 @@
             id:         "defaultCountry",
             name:       "defaultCountry",
             options:    countries,
-            value:      field.defaultCountry
+            value:      field.defaultCountry|length ? field.defaultCountry : 'US'
         }) }}
 
 
