--- a/src/templates/_field/_settings.twig
+++ b/src/templates/_field/_settings.twig
@@ -18,26 +18,26 @@
     <div class="heading">
         <table class="editable">
             <thead>
-            <tr>
-                <th class="header" scope="col">{{ "Enable"|t }}</th>
-                <th class="header" scope="col">{{ "Field"|t }}</th>
-            </tr>
+                <tr>
+                    <th class="header" scope="col">{{ "Enable"|t }}</th>
+                    <th class="header" scope="col">{{ "Field"|t }}</th>
+                </tr>
             </thead>
             <tbody class="layout-table-rows">
                 <tr>
-                    <td class="layout-table-enable"> <input type="checkbox" id="enabledFields[name]" name="enabledFields[name]" value="name" {% if field.enabledFields.name %}checked{% endif %}/></td>
+                    <td class="layout-table-enable"> <input type="checkbox" id="enabledFields[name]" name="enabledFields[name]" value="name" {% if field.enabledFields.name is defined %}checked{% endif %}/></td>
                     <td class="layout-table-label"> <label for="enabledFields[name]"> {{ 'Name'|t}}</label></td>
                 </tr>
                 <tr>
-                    <td class="layout-table-enable"> <input type="checkbox" id="enabledFields[street2]" name="enabledFields[street2]" value="street2" {% if field.enabledFields.street2 %}checked{% endif %}/></td>
+                    <td class="layout-table-enable"> <input type="checkbox" id="enabledFields[street2]" name="enabledFields[street2]" value="street2" {% if field.enabledFields.street2 is defined %}checked{% endif %}/></td>
                     <td class="layout-table-label"> <label for="enabledFields[street2]"> {{ 'Street 2'|t}}</label></td>
                 </tr>
                 <tr>
-                    <td class="layout-table-enable"> <input type="checkbox" id="enabledFields[state]" name="enabledFields[state]" value="state" {% if field.enabledFields.state %}checked{% endif %}/></td>
+                    <td class="layout-table-enable"> <input type="checkbox" id="enabledFields[state]" name="enabledFields[state]" value="state" {% if field.enabledFields.state is defined %}checked{% endif %}/></td>
                     <td class="layout-table-label"> <label for="enabledFields[state]"> {{ 'State'|t}}</label></td>
                 </tr>
                 <tr>
-                    <td class="layout-table-enable"> <input type="checkbox" id="enabledFields[country]" name="enabledFields[country]" value="country" {% if field.enabledFields.country %}checked{% endif %}/></td>
+                    <td class="layout-table-enable"> <input type="checkbox" id="enabledFields[country]" name="enabledFields[country]" value="country" {% if field.enabledFields.country is defined %}checked{% endif %}/></td>
                     <td class="layout-table-label"> <label for="enabledFields[country]"> {{ 'Country'|t}}</label></td>
                 </tr>
             </tbody>
@@ -50,7 +50,6 @@
             options:    countries,
             value:      field.defaultCountry|length ? field.defaultCountry : 'US'
         }) }}
-
 
         {{ forms.lightswitchField({
             label:        "Get coordinates for addresses"|t,
@@ -65,6 +64,5 @@
             name:         'showCoordinates',
             on:           field.showCoordinates,
         }) }}
-
     </div>
 </div>
