--- a/src/templates/_field/_input.twig
+++ b/src/templates/_field/_input.twig
@@ -75,12 +75,15 @@
 
         {% if 'country' in fieldSettings.enabledFields  %}
         <div class="form__item form--country">
-            {{ forms.selectField({
-                id:         name ~ '-country',
-                name:       name ~ '[country]',
-                options:    countries,
-                value:      (value|length and value.country|length) ? value.country : fieldSettings.defaultCountry
-            }) }}
+            <div class="input ltr">
+                <div class="select">
+                        <select id="{{ name ~ '-country' }}" class="fieldtoggle" name="{{ name ~ '[country]' }}">
+                        {% for key, country in countries %}
+                            <option value="{{ key }}" {% if (value|length and value.country|length and value.country == key) %}selected="selected"{% elseif fieldSettings.defaultCountry == key %}selected="selected"{% endif %}>{{ country }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
         </div>
         {% else %}
             <input type="hidden" name="{{ name }}~[country]" id="{{ name }}~[country]" value="{{ (value|length and value.country|length) ? value.country : fieldSettings.defaultCountry }}">
