--- a/src/templates/_field/_input.twig
+++ b/src/templates/_field/_input.twig
@@ -77,7 +77,7 @@
         <div class="form__item form--country">
             <div class="input ltr">
                 <div class="select">
-                        <select id="{{ name ~ '-country' }}" class="fieldtoggle" name="{{ name ~ '[country]' }}">
+                        <select id="{{ name ~ '-country' }}" class="fieldtoggle" name="{{ name ~ '[country]' }}" required>
                         {% for key, country in countries %}
                             <option value="{{ key }}" {% if (value|length and value.country|length and value.country == key) %}selected="selected"{% elseif fieldSettings.defaultCountry == key %}selected="selected"{% endif %}>{{ country }}</option>
                         {% endfor %}
@@ -86,7 +86,7 @@
             </div>
         </div>
         {% else %}
-            <input type="hidden" name="{{ name }}~[country]" id="{{ name }}~[country]" value="{{ (value|length and value.country|length) ? value.country : fieldSettings.defaultCountry }}">
+            <input type="hidden" id="{{ name ~ '-country' }}" name="{{ name ~ '[country]' }}" i value="{{ (value|length and value.country|length) ? value.country : fieldSettings.defaultCountry }}">
         {% endif %}
     </div>
 
