Fixed typo on settings page

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -2,7 +2,7 @@
 
 {{ forms.autosuggestField({
     label: 'Google API Key (use for geocoding requests)'|t,
-    instructions: "Google's geocoding API does not support HTTML referer restrictions. <a href='{link}'>More information</a>"|t({link: 'https://developers.google.com/maps/faq#browser-keys-blocked-error'}),
+    instructions: "Google's geocoding API does not support HTTP referer restrictions. <a href='{link}'>More information</a>"|t({link: 'https://developers.google.com/maps/faq#browser-keys-blocked-error'}),
     id: 'googleApiKey',
     name: 'googleApiKey',
     value: settings['googleApiKey'],
