Fixed a small layout issue in field settings

--- a/src/templates/_field/_settings.twig
+++ b/src/templates/_field/_settings.twig
@@ -42,6 +42,8 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+</div>
 
         {{ forms.selectField({
             label:      "Default country"|t,
