--- a/src/templates/_field/_input.twig
+++ b/src/templates/_field/_input.twig
@@ -2,10 +2,10 @@
 
 <div class="easyaddressfield-field" id="{{ name }}">
         {% set dragPinData %}
-            data-default="false"
+            data-default="true"
             data-lat="50.8823536"
             data-lng="4.7027497"
-            data-zoom="10"
+            data-zoom="16"
         {% endset %}
     {% if geocoder == 'google' and keyConfigured %}
         <div style="color: #576575; position: absolute; top: -30px; right: 3px;">
