--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -1,12 +1,14 @@
 {% import "_includes/forms" as forms %}
 
+{% set services = [] %}
+
 {{ forms.selectField({
     label: 'Geocoding service'|t,
     instructions: 'The geocoding service used, defaults to Nomanatim',
     id: 'geoCodingService',
     name: 'geoCodingService',
     value: settings['geoCodingService'],
-    options: services,
+    options: geoCoders,
     errors: settings.getErrors('geoCodingService'),
 }) }}
 
